extractor.fit_transform(Girl, drop to the flo, i wnt 2 c dat bootie go :)

--- a/Feature_Engineering_Natural_language_processing_Classifying_social_media_sentiment.ipynb
+++ b/Feature_Engineering_Natural_language_processing_Classifying_social_media_sentiment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKSxn9va0thKgIP9n1U79J",
+      "authorship_tag": "ABX9TyP64z6LG1Iuc+9DY2sjs1vy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3155,118 +3155,14 @@
         "mention_pattern = re.compile(r'@(\\w+)')\n",
         "emoji_pattern = re.compile(r'[^\\x00-\\x7F]+')\n",
         "train[\"emojis\"] = train[\"text\"].apply(lambda x: \" \".join(emoji_pattern .findall(x)))\n",
-        "train.loc[train[\"emojis\"].apply(lambda x: len(x)>0)][\"emojis\"].value_counts()\n",
+        "#train.loc[train[\"emojis\"].apply(lambda x: len(x)>0)][\"emojis\"].value_counts()\n",
         "#train.loc[train[\"emojis\"].apply(lambda x: len(x.split())>1)][\"emojis\"].value_counts()\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 490
-        },
-        "id": "VwrJP6QDKDym",
-        "outputId": "796f7d7a-4559-4585-e78f-c743001ca6ec"
+        "id": "VwrJP6QDKDym"
       },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "emojis\n",
-              "“ ”      39\n",
-              "’        17\n",
-              "👍         8\n",
-              "😊         7\n",
-              "❤️        6\n",
-              "         ..\n",
-              "“ ” 💘     1\n",
-              "💪         1\n",
-              "❤️ 👊      1\n",
-              "😷         1\n",
-              "“ ” 🙈     1\n",
-              "Name: count, Length: 125, dtype: int64"
-            ],
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>count</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>emojis</th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>“ ”</th>\n",
-              "      <td>39</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>’</th>\n",
-              "      <td>17</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>👍</th>\n",
-              "      <td>8</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>😊</th>\n",
-              "      <td>7</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>❤️</th>\n",
-              "      <td>6</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>“ ” 💘</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>💪</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>❤️ 👊</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>😷</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>“ ” 🙈</th>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>125 rows × 1 columns</p>\n",
-              "</div><br><label><b>dtype:</b> int64</label>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 28
-        }
-      ]
+      "execution_count": 33,
+      "outputs": []
     },
     {
       "cell_type": "code",
