extractor.fit_transform(Girl, drop IT to the flo, i wnt 2 c dat bootie go :)

--- a/Feature_Engineering_Natural_language_processing_Classifying_social_media_sentiment.ipynb
+++ b/Feature_Engineering_Natural_language_processing_Classifying_social_media_sentiment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP64z6LG1Iuc+9DY2sjs1vy",
+      "authorship_tag": "ABX9TyPrTYzv5S+eN+GaNCY8k+uK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3538,6 +3538,112 @@
       "metadata": {
         "id": "i-jVfP2FrJfF"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Summary\n",
+        "This notebook performs **feature engineering for sentiment classification** on a cleaned version of the well-known **Twitter US Airline Sentiment** dataset (`cleaned_airline_tweets.csv`). The task is multiclass classification: predict tweet sentiment (`positive`, `neutral`, `negative`) from the tweet `text`.  \n",
+        "\n",
+        "The workflow starts with basic text vectorization baselines (**CountVectorizer** + **TfidfVectorizer** + Logistic Regression), then moves to a more sophisticated **custom feature extraction pipeline** that:\n",
+        "\n",
+        "- extracts domain-relevant signals (hashtags, mentions, URLs, emojis, punctuation counts)\n",
+        "- cleans the main text by removing those elements\n",
+        "- applies different vectorizers to each extracted part\n",
+        "- reduces dimensionality with **TruncatedSVD**\n",
+        "- feeds everything into a classifier\n",
+        "\n",
+        "The focus is on showing how thoughtful **pre-processing + feature construction** (beyond plain bag-of-words / TF-IDF) can enrich the signal for social media sentiment tasks.\n",
+        "\n",
+        "### All Steps Involved + Why They Were Done\n",
+        "\n",
+        "1. **Data Loading & Quick EDA**  \n",
+        "   - Read CSV, check columns, unique sentiments, class distribution, unique tweets.  \n",
+        "   - Stratified train/test split (80/20) on sentiment label.  \n",
+        "   **Why**: Understand imbalance (negative tweets usually dominate airline data), confirm text is the main input, ensure test set mirrors train distribution.\n",
+        "\n",
+        "2. **Simple Text Vectorization Baselines**  \n",
+        "   - `CountVectorizer` experiments: single words, n-grams (1–3), stop words, max_features limit.  \n",
+        "   - `TfidfVectorizer` with similar hyperparameters.  \n",
+        "   - Wrapped in `Pipeline` + `LogisticRegression` → grid search over: lowercase, stop_words, max_features, ngram_range, C.  \n",
+        "   **Why**: Establish strong baseline using standard sparse text representations. Compare frequency counting vs. term importance weighting (TF-IDF usually wins slightly on sentiment tasks).\n",
+        "\n",
+        "3. **Feature Construction – Noise Extraction & Cleaning**  \n",
+        "   - Regex patterns to extract:  \n",
+        "     – URLs (domain part)  \n",
+        "     – Hashtags (#word)  \n",
+        "     – Mentions (@user)  \n",
+        "     – Emojis (non-ASCII)  \n",
+        "     – Numbers  \n",
+        "   - Count punctuation: ! ? . ,  \n",
+        "   - Clean main text by removing all extracted elements.  \n",
+        "   **Why**: Social media contains strong sentiment signals in structure (lots of !, emojis, CAPS, mentions, hashtags). Removing them from main text prevents noise dilution, while keeping them as separate features preserves signal.\n",
+        "\n",
+        "4. **Custom Transformer** (`TextFeatureExtractor`)  \n",
+        "   - Fits nothing (stateless), transforms Series of tweets → DataFrame with:  \n",
+        "     `cleaned_text`, `hashtags`, `urls`, `mentions`, `emojis`, `excl_count`, `ques_count`, `comma_fullstop_count`.  \n",
+        "   **Why**: Encapsulate regex-based feature engineering in scikit-learn-compatible object → reusable & pipeline-friendly.\n",
+        "\n",
+        "5. **Advanced Feature Processing Pipeline**  \n",
+        "   - `ColumnTransformer` applies different vectorizers to different columns:  \n",
+        "     – `TfidfVectorizer(max_features=1000)` on `cleaned_text`  \n",
+        "     – `CountVectorizer` on `hashtags`, `mentions`, `urls`  \n",
+        "     – `CountVectorizer(token_pattern=r\"\\S\")` on `emojis` (treats each emoji as token)  \n",
+        "     – `passthrough` on scalar counts (!, ?, punctuation)  \n",
+        "   - `TruncatedSVD(n_components=1000)` for dimensionality reduction.  \n",
+        "   - Final classifier (LogisticRegression in example).  \n",
+        "   **Why**: Heterogeneous feature types need specialized handling. SVD reduces curse of dimensionality after wide concatenation; helps especially with sparse multi-source vectors.\n",
+        "\n",
+        "6. **Model Training & Evaluation**  \n",
+        "   - Fit pipeline end-to-end on train text → predict on test text.  \n",
+        "   - Print classification report.  \n",
+        "   **Why**: Show realistic end-to-end performance of rich feature set vs. plain TF-IDF baseline. (Notebook notes similar metrics but much faster training.)\n",
+        "\n",
+        "7. **Comment on Feature Extraction**  \n",
+        "   - Brief mention of TruncatedSVD as simple & effective way to compress high-dimensional text features.  \n",
+        "   **Why**: Reminder that dimensionality reduction is often necessary after aggressive feature concatenation.\n",
+        "\n",
+        "### Packages / Modules / Techniques Used\n",
+        "\n",
+        "| Package / Module                          | Class / Function / Technique                              | Why It Was Used |\n",
+        "|-------------------------------------------|------------------------------------------------------------|-----------------|\n",
+        "| **pandas**                                | `read_csv`, `value_counts`, `apply`, `str.replace`, regex `.findall` | Data loading, grouping, custom regex-based feature extraction & cleaning |\n",
+        "| **numpy**                                 | (implicit)                                                 | Array operations (not heavily used here) |\n",
+        "| **matplotlib.pyplot**                     | (imported but not visibly used in code)                    | Potential for later plots (EDA) |\n",
+        "| **time**                                  | `time.time()`                                              | Measure grid-search training duration |\n",
+        "| **sklearn.model_selection**               | `train_test_split` (stratified), `GridSearchCV`            | Balanced split; hyperparameter tuning of vectorizer + model jointly |\n",
+        "| **sklearn.linear_model**                  | `LogisticRegression`                                       | Fast, interpretable linear baseline classifier for text |\n",
+        "| **sklearn.ensemble**                      | `ExtraTreesClassifier`, `RandomForestClassifier` (imported but not used in final pipeline) | Potential tree-based alternatives |\n",
+        "| **sklearn.pipeline**                      | `Pipeline`                                                 | Chain feature extraction → vectorization → reduction → classifier |\n",
+        "| **sklearn.compose**                       | `ColumnTransformer`                                        | Apply different transformers to different output columns of custom extractor |\n",
+        "| **sklearn.feature_extraction.text**       | `CountVectorizer`, `TfidfVectorizer`                       | Core sparse text vectorization (bag-of-words vs. tf-idf) |\n",
+        "| **sklearn.preprocessing**                 | `FunctionTransformer` (imported but not heavily used)      | Potential wrapper for custom functions |\n",
+        "| **sklearn.decomposition**                 | `TruncatedSVD`                                             | Linear dimensionality reduction on concatenated sparse matrix |\n",
+        "| **sklearn.metrics**                       | `classification_report`                                    | Detailed per-class precision/recall/F1 evaluation |\n",
+        "| **sklearn.base**                          | `BaseEstimator`, `TransformerMixin`                        | Create custom scikit-learn compatible `TextFeatureExtractor` |\n",
+        "| **re**                                    | `compile`, `findall`                                       | Regex-based extraction of URLs, hashtags, mentions, emojis, numbers |\n",
+        "| **ydata-profiling**                       | `ProfileReport` (commented out)                            | Automated EDA report (disabled for GitHub compatibility) |\n",
+        "\n",
+        "**Key Technique Highlights**  \n",
+        "- **Custom `TextFeatureExtractor`** — most important contribution: regex-driven multi-aspect feature construction tailored to Twitter/social media noise.  \n",
+        "- **ColumnTransformer on heterogeneous text-derived columns** — clean way to vectorize main cleaned text differently from metadata-like fields (hashtags, mentions, emojis, punctuation counts).  \n",
+        "- Joint grid search over vectorizer hyperparameters + model regularisation — realistic way to tune the full pipeline.  \n",
+        "- Emphasis on cleaning while **preserving** structural sentiment cues rather than just removing everything.\n",
+        "\n",
+        "This notebook provides a practical demonstration of **social-media-specific text feature engineering** beyond vanilla Count/TF-IDF, showing how domain knowledge (Twitter syntax) can be turned into engineered columns that enrich a classical ML pipeline."
+      ],
+      "metadata": {
+        "id": "l-tYhcf7dkyO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "45jPHeLWdnDk"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
