--- a/Feature_Engineering.ipynb
+++ b/Feature_Engineering.ipynb
@@ -13,7 +13,7 @@
         "a9cSMa9RvRJM",
         "40MjmXjid4JL"
       ],
-      "authorship_tag": "ABX9TyMcMTr/6B/18mR/d0OdnC2q",
+      "authorship_tag": "ABX9TyOOGgaM4B64YEIvGnusStH0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3429,28 +3429,142 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "## Bag-of-X: Turning Natural Text into Flat Vectors"
+      ],
       "metadata": {
         "id": "OVVdV1HyDsu9"
       }
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "###  Bag of Words\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "jIuE_hoxaNYF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Bag of n-grams\n",
+        "\n",
+        "Same as bag of words, but takes fixed sized tokens"
+      ],
+      "metadata": {
+        "id": "9zbPROCXaNUu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Filtering for Cleaner Features"
+      ],
       "metadata": {
         "id": "G031dT9lDsr9"
       }
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "### Stop Words\n"
+      ],
+      "metadata": {
+        "id": "hQd-3UHxa5nV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Frequency Based Filtering"
+      ],
+      "metadata": {
+        "id": "ajDB24-Wa5la"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Basically Shanon's Info theory with just not with full-on probability typshii"
+      ],
+      "metadata": {
+        "id": "QAt3I-i8bhXG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Stemming"
+      ],
+      "metadata": {
+        "id": "qzzBpAIqa5ir"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I mean i can't use nltk or whatever package for my kaggale comp, i'll see if i can implement this from scratch."
+      ],
+      "metadata": {
+        "id": "t12Qj7Uyb4ZT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Atoms of Meaning: From Words to n-Grams to Phrases"
+      ],
       "metadata": {
         "id": "H8Pw8h3cDspQ"
       }
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "### Parsing and Tokenization"
+      ],
+      "metadata": {
+        "id": "TUIeKIBfcVDY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Collocation Extraction for Phrase Detection"
+      ],
+      "metadata": {
+        "id": "iVO7y0gjcU_9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Collocation Extraction for Phrase Detection"
+      ],
+      "metadata": {
+        "id": "PT3e9TgbsVh4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The quality of the trained linear classifier directly depends upon the null\n",
+        "space and the column space of the data matrix. A large column space means that\n",
+        "there is little linear dependency between the features, which is generally good. The\n",
+        "null space contains “novel” data points that cannot be formulated as linear combina‐\n",
+        "tions of existing data; a large null space could be problematic. ("
+      ],
+      "metadata": {
+        "id": "Yu_lyyNosYHS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Summary"
+      ],
       "metadata": {
         "id": "meFcMS2vDsmw"
       }
@@ -3467,10 +3581,107 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Summary\n",
+        "\n",
+        "The results were not as one might have expected. Tf-idf and ℓ2 normalization do not\n",
+        "improve the final classifier’s accuracy above plain bag-of-words. After acquiring\n",
+        "some statistical modeling and linear algebra chops, we realize why: neither of them\n",
+        "changes the column space of the data matrix.\n",
+        "- One small difference between the two is that tf-idf can “stretch” the word count as\n",
+        "well as “compress” it. In other words, it makes some counts bigger, and others close\n",
+        "to zero. Therefore, tf-idf could altogether eliminate uninformative words.\n",
+        "- Along the way, we also discovered another effect of feature scaling: it improves the\n",
+        "condition number of the data matrix, making linear models much faster to train.\n",
+        "Both ℓ2 normalization and tf-idf have this effect.\n",
+        "- To summarize, the lesson is: the right feature scaling can be helpful for classification.\n",
+        "The right scaling accentuates the informative words and downweights the common\n",
+        "words. It can also improve the condition num\n",
+        "\n",
+        "\n",
+        "- This story is a wonderful illustration of the difficulty of analyzing the effects of fea‐\n",
+        "ture engineering in the general case. Changing the features affects the trainingprocess and the models that ensue. Linear models are the simplest models to under‐\n",
+        "stand, yet it still takes very careful experimentation methodology and a lot of deep\n",
+        "mathematical knowledge to tease apart the theoretical and practical impacts. This\n",
+        "would be mostly impossible with more complicated models or feature transforma‐\n",
+        "tions."
+      ],
+      "metadata": {
+        "id": "X0Uw5Jvmuer4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Categorical Variables: Counting Eggs in the Age of Robotic Chickens"
       ],
       "metadata": {
         "id": "NnlmjN1pagmu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We usually only represent categorical with binning(OHE typshoo) or bin counting or even just mappiong value counts and summary statistics wrt a variable/group to that row variable"
+      ],
+      "metadata": {
+        "id": "et0A9AA4unIQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Encoding Categorical Variables"
+      ],
+      "metadata": {
+        "id": "btPkT2ltvnoP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dummy encoding is OHE, but it uses 0 bit to reference base category lol never thought about it"
+      ],
+      "metadata": {
+        "id": "t9TgSL_ovpuZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dealing with Large Categorical Variables"
+      ],
+      "metadata": {
+        "id": "RRQzZK8pzQiy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Feature Hashin"
+      ],
+      "metadata": {
+        "id": "4xJwnYbU2oSw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Honestly I heavily fw with binning cause it's super useful to train boosted trees and then we can use that information to later do feature selection. it's a Win Win, or a major W, G"
+      ],
+      "metadata": {
+        "id": "2nxzdbGm0RMI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Bin counting (SOP/SOTA)\n",
+        "But this is usally done with Tree models, more specifically boosted tree models we, can try it out later\n",
+        "\n",
+        "- For **rare categories**, back-off method where the value counts have to cross some threshold, OR count min sketch in which all categories are mapped to hash functions with output range m < k (no of categories) amd then then retreiving or using , compute or recompute the hash and return smallest statistic."
+      ],
+      "metadata": {
+        "id": "WaczPyuM2qdr"
       }
     },
     {
